--- a/src/components/Project.module.css
+++ b/src/components/Project.module.css
@@ -101,6 +101,7 @@
 .project:hover img {
     opacity: .5;
 }
+.project:hover figure .project_year,
 .project:hover figure p,
 .project:hover figure h2 {
     opacity: 1;
@@ -113,8 +114,60 @@
     -webkit-transform: scale(1);
     -webkit-transform-transform: scale(1);
 }
+
+.project figure .project_year {
+    opacity: 0;
+    position: relative;
+    top: -20px;
+    transition: opacity 0.6s, transform 0.6s;
+    -webkit-transform: translate3d(0, 20px, 0);
+    -webkit-transform-transform: translate3d(0, 20px, 0);
+}
+
+@media screen and (min-width: 992px) and (max-width: 1199px) {
+    .project figure figcaption {
+        padding: .5em;
+    }
+    .project figure figcaption:after,
+    .project figure figcaption:before {
+        top: 15px;
+        right: 15px;
+        bottom: 15px;
+        left: 15px;
+    }
+}
+
 @media screen and (max-width: 767px) {
     .project {
         margin-bottom: 15px;
+    }
+}
+
+@media screen and (max-width: 576px) {
+    .project figure figcaption {
+        padding: .5em;
+    }
+    .project figure figcaption:after,
+    .project figure figcaption:before {
+        top: 10px;
+        right: 10px;
+        bottom: 10px;
+        left: 10px;
+    }
+    .project img {
+        opacity: .5;
+    }
+    .project figure .project_year,
+    .project figure p,
+    .project figure h2 {
+        opacity: 1;
+        -webkit-transform: translate3d(0, 0, 0);
+        -webkit-transform-transform: translate3d(0, 0, 0);
+    }
+    .project figure figcaption:before,
+    .project figure figcaption:after {
+        opacity: 1;
+        -webkit-transform: scale(1);
+        -webkit-transform-transform: scale(1);
     }
 }
