Adding new works

--- a/src/pages/Projects.module.css
+++ b/src/pages/Projects.module.css
@@ -2,6 +2,41 @@
     display: grid;
     grid-template-rows: auto;
 }
+
+.projects__filter button img {
+    width: 17px;
+    height: 17px;
+    margin-left: 3px;
+    object-fit: contain;
+    transition: all .3s ease;
+}
+
+.projects__filter {
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    gap: 20px;
+}
+
+.projects__filter button {
+    background: transparent;
+    display: flex;
+    align-items: center;
+    color: #777;
+    border: none;
+    font-size: 16px;
+    cursor: pointer;
+    margin-bottom: 10px;
+}
+
+.projects__filter-up:hover img {
+    animation: arrowUp 1s infinite;
+}
+
+.projects__filter-down:hover img {
+    animation: arrowDown 1s infinite;
+}
+
 @media screen and (min-width: 768px) {
     .portfolio_projects {
         margin-left: -15px;
@@ -17,5 +52,33 @@
     .portfolio_projects {
         gap: 30px;
         grid-template-columns: 1fr 1fr 1fr;
+    }
+}
+
+@keyframes arrowUp {
+    0% {
+        transform: translateY(0);
+    }
+
+    50% {
+        transform: translateY(-3px);
+    }
+
+    100% {
+        transform: translateY(0);
+    }
+}
+
+@keyframes arrowDown {
+    0% {
+        transform: translateY(0);
+    }
+
+    50% {
+        transform: translateY(3px);
+    }
+
+    100% {
+        transform: translateY(0);
     }
 }
